--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -42,3 +42,16 @@
   object-fit: cover; 
   width: 100%; 
 }
+
+.fixed-height-genre {
+  height: 550px;
+}
+
+.custom-col {
+  flex: 0 0 20%;
+  max-width: 20%;
+}
+
+.genre-colors{
+  background-color: #FFA5A5;
+}
