--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -1,41 +1,6 @@
 .App {
   text-align: center;
 }
-/* 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 
 .fixed-height-img {
   height: 200px; 
@@ -43,9 +8,12 @@
   width: 100%; 
 }
 
-.fixed-height-genre {
-  height: 550px;
+.artists-card{
+  background-color: #f8f9f9;
+  min-height: 200px;
 }
+
+
 
 .custom-col {
   flex: 0 0 20%;
@@ -54,4 +22,8 @@
 
 .genre-colors{
   background-color: #FFA5A5;
+}
+
+.fixed-height-genre {
+  height: 550px;
 }
