--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -13,9 +13,7 @@
   min-height: 200px;
 }
 
-
-
-.custom-col {
+.genre-custom-col {
   flex: 0 0 20%;
   max-width: 20%;
 }
@@ -24,6 +22,10 @@
   background-color: #FFA5A5;
 }
 
-.fixed-height-genre {
+.genre-fixed-height {
   height: 550px;
+}
+
+.genre-fixed-body{
+  max-height: 150px;
 }
