--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+.inline {
+  display: inline;
+}
+
+.middle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
