--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -3,12 +3,12 @@
 }
 
 .fixed-height-img {
-  height: 200px; 
-  object-fit: cover; 
-  width: 100%; 
+  height: 200px;
+  object-fit: cover;
+  width: 100%;
 }
 
-.artist-card{
+.artist-card {
   background-color: #f8f9f9;
   min-height: 180px;
 }
@@ -18,24 +18,25 @@
   max-width: 20%;
 }
 
-.genre-colors{
+.genre-colors {
   background-color: #f8f9f9;
 }
 
 .genre-fixed-height {
-  height: 550px;
+  height: auto;
+    flex-grow: 1;
 }
 
-.genre-fixed-body{
-  max-height: 150px;
+.genre-fixed-body {
+  height: auto;
+  flex-grow: 1;
 }
 
 .about-fixed-height {
-  min-height: 400px;
+  min-height: 560px;
 }
 
-.about-custom-col{
-  
+.about-custom-col {
   max-width: 60%;
 }
 
@@ -43,7 +44,7 @@
   min-height: 800px;
 }
 
-.about-tool-photo{
+.about-tool-photo {
   max-height: 150px;
   min-width: 150px;
   aspect-ratio: 1;
