--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,7 +34,17 @@ html, body {
 
 .page-title{
   color: white;
+  margin-top: 3vh;
 }
+
+.navbar {
+  background-color: var(--pink) !important;
+}
+
+.nav-link, .navbar-brand {
+  color: var(--midnight);
+}
+
 
 /* Home Page*/
 .home-container {
@@ -55,8 +65,9 @@ html, body {
 
 .artist-card {
   background-color: var(--lavander);
-  min-height: 200px;
+  height: 70vh;
   box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1);
+  overflow-y: scroll;
 }
 
 .artist-card img {
@@ -379,6 +390,15 @@ html, body {
   height: 100vh;
 }
 
+.event-instance-image {
+  width: 30vh;
+  height: 30vh;
+  border: .2em solid;
+  border-radius: 5;
+  border-color: var(--pink);
+  margin-bottom: 2vh;
+}
+
 .event-address{
   color:white;
 }
@@ -411,12 +431,12 @@ html, body {
 .thumb {
   width: 10px;
   height: 10px;
-  background-color: #007bff;
+  background-color: var(--darkcolor);
   border-radius: 50%;
 }
 
 .track {
   border-radius: 2px;
   height: 4px;
-  background-color : var(--lightcolor)
+  background-color : var(--pink)
 }
