--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,11 +39,13 @@ body {
 
 .navbar {
   background-color: var(--pink) !important;
+  font-size: var(--mfont);
 }
 
 .nav-link,
 .navbar-brand {
   color: var(--midnight);
+  font-size: var(--mfont);
 }
 
 /* Home Page*/
@@ -408,6 +410,8 @@ body {
   color: white;
 }
 
+/* Search bar stylization */
+
 .link-container a {
   margin-right: 10px;
 }
@@ -436,4 +440,12 @@ body {
   border-radius: 2px;
   height: 4px;
   background-color: var(--pink);
+}
+
+/* pagination */
+
+.page-buttonm{
+  background-color: var(--pink);
+  color: white;
+  padding: 5px;
 }
